Use image pulsar instead pulsar-all to avoid some memories issues with memory cache
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/pulsar/templates/proxy-service.yaml
+++ b/charts/pulsar/templates/proxy-service.yaml
@@ -38,6 +38,9 @@ spec:
       protocol: TCP
     - name: pulsar
       port: {{ .Values.proxy.ports.pulsar }}
+      {{- if and (eq .Values.proxy.service.type "NodePort") .Values.proxy.service.nodePortPulsar }}
+      nodePort: {{.Values.proxy.service.nodePortPulsar }}
+      {{- end }}
       protocol: TCP
     {{- end }}
     {{- if and .Values.tls.enabled .Values.tls.proxy.enabled }}
