use less replicacount for ci tests
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/pulsar/ci/ci-values.yaml
+++ b/charts/pulsar/ci/ci-values.yaml
@@ -1,11 +1,19 @@
 proxy:
   resources: null
+  replicaCount: 2
 zookeeper:
   resources: null
+  replicaCount: 1
 bookkeeper:
   resources: null
+  replicaCount: 1
 broker:
   resources: null
+  replicaCount: 1
+  configData:
+    managedLedgerDefaultEnsembleSize: "2"
+    managedLedgerDefaultWriteQuorum: "2"
+    managedLedgerDefaultAckQuorum: "1"
 autorecovery:
   resources: null
 pulsar_manager:
