use less replicacount for ci tests
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/pulsar/ci/ci-values.yaml
+++ b/charts/pulsar/ci/ci-values.yaml
@@ -7,6 +7,9 @@ affinity:
 # disable auto recovery
 components:
   autorecovery: false
+extra:
+  autoRecovery: false
+# disable resources limit & limit to 1 replica
 proxy:
   resources: null
   replicaCount: 1
@@ -24,8 +27,6 @@ broker:
     managedLedgerDefaultEnsembleSize: "1"
     managedLedgerDefaultWriteQuorum: "1"
     managedLedgerDefaultAckQuorum: "1"
-autorecovery:
-  resources: null
 pulsar_manager:
   resources: null
 toolset:
