--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -33,6 +33,7 @@ jobs:
         uses: helm/chart-testing-action@v1.0.0-rc.1
         with:
           command: install
+          helm-extra-args: --timeout 500
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.0.0-rc.1
