Comment timeout helm add add some overwrite for ci test
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/pulsar/ci/ci-values.yaml
+++ b/charts/pulsar/ci/ci-values.yaml
@@ -13,15 +13,23 @@ extra:
 proxy:
   resources: null
   replicaCount: 1
+  pdb:
+    usePolicy: false
 zookeeper:
   resources: null
   replicaCount: 1
+  pdb:
+    usePolicy: false
 bookkeeper:
   resources: null
   replicaCount: 1
+  pdb:
+    usePolicy: false
 broker:
   resources: null
   replicaCount: 1
+  pdb:
+    usePolicy: false
   configData:
     autoSkipNonRecoverableData: "true"
     managedLedgerDefaultEnsembleSize: "1"
