--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -12,7 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v2
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
