--- a/charts/pulsar/ci/ci-values.yaml
+++ b/charts/pulsar/ci/ci-values.yaml
@@ -12,37 +12,37 @@ extra:
   autoRecovery: false
 # disable resources limit & limit to 1 replica
 proxy:
-  resources: []
   replicaCount: 1
-  pdb:
-    usePolicy: false
+  service:
+    type: ClusterIP
 zookeeper:
-  resources: []
   replicaCount: 1
-  pdb:
-    usePolicy: false
 bookkeeper:
-  resources: []
   replicaCount: 1
   configData:
     diskUsageThreshold: "0.999"
     diskUsageWarnThreshold: "0.999"
     PULSAR_PREFIX_diskUsageThreshold: "0.999"
     PULSAR_PREFIX_diskUsageWarnThreshold: "0.999"
-  pdb:
-    usePolicy: false
 broker:
-  resources: []
   replicaCount: 1
-  pdb:
-    usePolicy: false
   configData:
     autoSkipNonRecoverableData: "true"
     managedLedgerDefaultEnsembleSize: "1"
     managedLedgerDefaultWriteQuorum: "1"
     managedLedgerDefaultAckQuorum: "1"
+pulsar_manager:
+  service:
+    type: ClusterIP
 initContainers:
-  resources: []
+  resources:
+    requests:
+      memory: ""
+      cpu: ""
+    limits:
+      memory: ""
+      cpu: ""
+
 toolset:
-  resources: []
   useProxy: false
+
