Add TTL to job for cleaning after successfull to avoid error when uprade chart
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/pulsar/templates/bookkeeper-cluster-initialize.yaml
+++ b/charts/pulsar/templates/bookkeeper-cluster-initialize.yaml
@@ -26,6 +26,7 @@ metadata:
     {{- include "pulsar.standardLabels" . | nindent 4 }}
     component: "{{ .Values.bookkeeper.component }}-init"
 spec:
+  ttlSecondsAfterFinished: 500
   template:
     spec:
       initContainers:
