[pulsar] add ingress manifest and values to expose pulsar_manager (#11)
* add ingress manifest and values to expose pulsar_manager
* Bump version

Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/pulsar/values.yaml
+++ b/charts/pulsar/values.yaml
@@ -922,6 +922,25 @@ pulsar_manager:
   service:
     type: ClusterIP
     annotations: {}
+
+  ingress:
+    enabled: false
+    annotations:
+      # kubernetes.io/ingress.class: nginx
+      # nginx.ingress.kubernetes.io/rewrite-target: /$1
+      # ingress.kubernetes.io/force-ssl-redirect: "true"
+      # ingress.kubernetes.io/rewrite-target: /
+    labels: {}
+    tls: []
+    ## Optional. Leave it blank if your Ingress Controller can provide a default certificate.
+    ## - secretName: ""
+    ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
+    extraPaths: []
+    ## Required if ingress is enabled
+    hostname: ""
+    protocol: http
+    path: /
+    port: 80
   admin:
     user: pulsar
     password: pulsar
