--- a/charts/pulsar/templates/pulsar-manager-admin-secret.yaml
+++ b/charts/pulsar/templates/pulsar-manager-admin-secret.yaml
@@ -18,6 +18,7 @@
 #
 
 {{- if or .Values.components.pulsar_manager .Values.extra.pulsar_manager }}
+{{- if not .Values.pulsar_manager.credentials.externalSecret.name}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -31,8 +32,9 @@ metadata:
     cluster: {{ template "pulsar.fullname" . }}
 type: Opaque
 data:
-  {{- if .Values.pulsar_manager.admin}}
-  PULSAR_MANAGER_ADMIN_PASSWORD: {{ .Values.pulsar_manager.admin.password | default "pulsar" | b64enc }}
-  PULSAR_MANAGER_ADMIN_USER: {{ .Values.pulsar_manager.admin.user | default "pulsar" | b64enc }}
+  {{- if .Values.pulsar_manager.credentials.admin}}
+  PULSAR_MANAGER_ADMIN_PASSWORD: {{ .Values.pulsar_manager.credentials.admin.password | default "pulsar" | b64enc }}
+  PULSAR_MANAGER_ADMIN_USER: {{ .Values.pulsar_manager.credentials.admin.user | default "pulsar" | b64enc }}
   {{- end }}
-{{- end }}
+  {{- end }}
+  {{- end }}
