--- a/charts/pulsar/templates/pulsar-manager-deployment.yaml
+++ b/charts/pulsar/templates/pulsar-manager-deployment.yaml
@@ -66,7 +66,7 @@ spec:
               name: "{{ template "pulsar.fullname" . }}-{{ .Values.pulsar_manager.component }}"
           env:
           - name: PULSAR_CLUSTER
-            value: {{ template "pulsar.fullname" . }}
+            value: {{ .Release.Name }}
           - name: USERNAME
             valueFrom:
               secretKeyRef:
@@ -80,5 +80,4 @@ spec:
       volumes:
         - name: pulsar-manager-data
           emptyDir: {}
-
 {{- end }}
