--- a/charts/pulsar/templates/pulsar-manager-deployment.yaml
+++ b/charts/pulsar/templates/pulsar-manager-deployment.yaml
@@ -66,19 +66,18 @@ spec:
               name: "{{ template "pulsar.fullname" . }}-{{ .Values.pulsar_manager.component }}"
           env:
           - name: PULSAR_CLUSTER
-            value: {{ template "pulsar.fullname" . }}
+            value: {{ .Release.Name }}
           - name: USERNAME
             valueFrom:
               secretKeyRef:
-                key: PULSAR_MANAGER_ADMIN_USER
-                name: "{{ template "pulsar.fullname" . }}-{{ .Values.pulsar_manager.component }}-secret"
+                key: {{ .Values.pulsar_manager.credentials.externalSecret.userKey | default "PULSAR_MANAGER_ADMIN_USER" }}
+                name: "{{ .Values.pulsar_manager.credentials.externalSecret.name | default (printf "%s-%s-secret" (include "pulsar.fullname" .)  .Values.pulsar_manager.component)  }}"
           - name: PASSWORD
             valueFrom:
               secretKeyRef:
-                key: PULSAR_MANAGER_ADMIN_PASSWORD
-                name: "{{ template "pulsar.fullname" . }}-{{ .Values.pulsar_manager.component }}-secret"
+                key: {{ .Values.pulsar_manager.credentials.externalSecret.passwordKey | default "PULSAR_MANAGER_ADMIN_PASSWORD" }}
+                name: "{{ .Values.pulsar_manager.credentials.externalSecret.name | default (printf "%s-%s-secret" (include "pulsar.fullname" .)  .Values.pulsar_manager.component)  }}"
       volumes:
         - name: pulsar-manager-data
           emptyDir: {}
-
 {{- end }}
