fix(elastic-stack): ci-values.yaml set resources request to null
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/elastic-stack/ci/ci-values.yaml
+++ b/charts/elastic-stack/ci/ci-values.yaml
@@ -1,18 +1,36 @@
 client:
   replicas: 1
-  resources: {}
+  resources:
+    requests:
+      cpu: ""
+      memory: ""
 data:
   replicas: 1
-  resources: {}
+  resources:
+    requests:
+      cpu: ""
+      memory: ""
 master:
   replicas: 1
-  resources: {}
+  resources:
+    requests:
+      cpu: ""
+      memory: ""
 logstash:
   replicas: 1
-  resources: {}
+  resources:
+    requests:
+      cpu: ""
+      memory: ""
 filebeat:
   replicas: 1
-  resources: {}
+  resources:
+    requests:
+      cpu: ""
+      memory: ""
 kibana:
   replicas: 1
-  resources: {}
+  resources:
+    requests:
+      cpu: ""
+      memory: ""
