--- a/charts/elastic-stack/ci/ci-values.yaml
+++ b/charts/elastic-stack/ci/ci-values.yaml
@@ -2,35 +2,35 @@ client:
   replicas: 1
   resources:
     requests:
-      cpu: ""
-      memory: ""
+      cpu: 100m
+      memory: 100Mi
 data:
   replicas: 1
   resources:
     requests:
-      cpu: ""
-      memory: ""
+      cpu: 100m
+      memory: 100Mi
 master:
   replicas: 1
   resources:
     requests:
-      cpu: ""
-      memory: ""
+      cpu: 100m
+      memory: 100Mi
 logstash:
   replicas: 1
   resources:
     requests:
-      cpu: ""
-      memory: ""
+      cpu: 100m
+      memory: 100Mi
 filebeat:
   replicas: 1
   resources:
     requests:
-      cpu: ""
-      memory: ""
+      cpu: 100m
+      memory: 100Mi
 kibana:
   replicas: 1
   resources:
     requests:
-      cpu: ""
-      memory: ""
+      cpu: 100m
+      memory: 100Mi
