fix(elastic-stack): values.yaml default values sysctl max map count init container to true
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/elastic-stack/ci/ci-values.yaml
+++ b/charts/elastic-stack/ci/ci-values.yaml
@@ -2,35 +2,25 @@ client:
   replicas: 1
   resources:
     requests:
-      cpu: 100m
-      memory: 100Mi
+      cpu: null
+      memory: null
 data:
   replicas: 1
   resources:
-    requests:
-      cpu: 100m
-      memory: 100Mi
+    requests: null
 master:
   replicas: 1
   resources:
-    requests:
-      cpu: 100m
-      memory: 100Mi
+    requests: null
 logstash:
   replicas: 1
   resources:
-    requests:
-      cpu: 100m
-      memory: 100Mi
+    requests: null
 filebeat:
   replicas: 1
   resources:
-    requests:
-      cpu: 100m
-      memory: 100Mi
+    requests: null
 kibana:
   replicas: 1
   resources:
-    requests:
-      cpu: 100m
-      memory: 100Mi
+    requests: null
