fix(elastic-stack): ci-values.yaml set minimum master nodes
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/elastic-stack/ci/ci-values.yaml
+++ b/charts/elastic-stack/ci/ci-values.yaml
@@ -1,17 +1,20 @@
 client:
   replicas: 1
+  minimumMasterNodes: 1
   resources:
     requests:
       cpu: 100m
       memory: 100Mi
 data:
   replicas: 1
+  minimumMasterNodes: 1
   resources:
     requests:
       cpu: 100m
       memory: 100Mi
 master:
   replicas: 1
+  minimumMasterNodes: 1
   resources:
     requests:
       cpu: 100m
