fix(elastic-stack): ci-values.yaml disable persistence
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/elastic-stack/ci/ci-values.yaml
+++ b/charts/elastic-stack/ci/ci-values.yaml
@@ -8,6 +8,8 @@ client:
 data:
   replicas: 1
   minimumMasterNodes: 1
+  persistence:
+    enabled: false
   resources:
     requests:
       cpu: 100m
@@ -15,6 +17,8 @@ data:
 master:
   replicas: 1
   minimumMasterNodes: 1
+  persistence:
+    enabled: false
   resources:
     requests:
       cpu: 100m
