--- a/charts/elastic-stack/Chart.yaml
+++ b/charts/elastic-stack/Chart.yaml
@@ -1,9 +1,12 @@
 apiVersion: v1
 name: elastic-stack
-version: 0.1.0
+version: 1.0.0
 appVersion: "7.6.2"
 description: A Helm chart for ELK
 home: https://www.elastic.co/products
-icon: https://www.elastic.co/assets/bltb35193323e8f1770/logo-elastic-stack-lt.svg
+icon: https://helm.elastic.co/icons/elasticsearch.png
+sources:
+  - https://github.com/elastic/helm-charts/tree/master/elasticsearch
 maintainers:
   - name: audig
+    email: maintainers@cnieg.fr
