fix(maildev): Use node port to expose smtp
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/maildev/values.yaml
+++ b/charts/maildev/values.yaml
@@ -18,7 +18,7 @@ services:
     type: ClusterIP
     port: 80
   smtp:
-    type: LoadBalancer
+    type: NodePort
     port: 25
 extraArgs: {}
 #  - "--outgoing-host"
