--- a/charts/maildev/templates/pvc.yaml
+++ b/charts/maildev/templates/pvc.yaml
@@ -12,9 +12,7 @@ spec:
     requests:
       storage: {{ .Values.persistence.size | quote }}
   {{- if .Values.persistence.storageClass }}
-  {{- if (eq "-" .Values.persistence.storageClass) }}
-  storageClassName: ""
-  {{- else }}
+  {{- if (not (eq "-" .Values.persistence.storageClass)) }}
   storageClassName: "{{ .Values.persistence.storageClass }}"
   {{- end }}
   {{- end }}
