--- a/charts/maildev/templates/cron.yaml
+++ b/charts/maildev/templates/cron.yaml
@@ -18,22 +18,23 @@ spec:
               imagePullPolicy: {{ .Values.cron.image.pullPolicy }}
               args:
                 - "find"
-                - "/usr/src/app/mailsave"
+                - "{{ .Values.persistence.mountPath }}"
                 - "-type"
                 - "f"
                 - "-mtime"
-                - "+{{.Values.cron.daysToKeep }}"
+                - "+{{ .Values.cron.daysToKeep }}"
                 - "-exec"
                 - "rm"
                 - "-f"
                 - "{}"
+                - ";"
               volumeMounts:
                 - name: data
-                  mountPath: /usr/src/app/mailsave
+                  mountPath: {{ .Values.persistence.mountPath }}
             - name: reload-mail
               image: "{{ .Values.cron.image.repository }}:{{ .Values.cron.image.tag }}"
               imagePullPolicy: {{ .Values.cron.image.pullPolicy }}
-              args: ["wget","{{ include "maildev.fullname" . }}-http:{{ .Values.services.http.port}}/reloadMailsFromFolder"]
+              args: ["wget","{{ include "maildev.fullname" . }}-http:{{ .Values.services.http.port}}/reloadMailsFromDirectory"]
           volumes:
             - name: data
               persistentVolumeClaim:
